# tic-tac-toe-xx

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  bugs.md  changelog.txt  compatibility_list.txt  gdd.txt  proj.config  proj.sh
include/tic-tac-toe++/: BoardSettings.hxx  Coord.hxx  Gameboard.hxx  player.hxx  ui.hxx  validators.hxx
src/: BoardSettings.hpp  Coord.cpp  Coord.cxx  Coord.hpp  GameBoard.hpp  Gameboard.cpp  Gameboard.cxx  Gameboard.hpp  main.cpp  main.cxx  player.cpp  player.cxx  player.hpp  ui.cxx  validators.cpp  validators.cxx  validators.hpp
test/: w_brow_input_seq.txt  w_lcol_input_seq.txt  w_ldiag_input_seq.txt  w_mcol_input_seq.txt  w_mrow_input_seq.txt  w_rcol_input_seq.txt  w_rdiag_input_seq.txt  w_stmt_input_seq.txt  w_trow_input_seq.txt
